[package]
name = "dffs"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rand = "0.8"
argon2 = "0.5"
rsa = "0.9"
base64 = "0.22"
qrcode = "0.13"
base32 = "0.5"
hex = "0.4"
totp-lite = "2.0"
generic-array = "0.14"

[[bin]]
name = "dffs"
path = "src/main.rs"